--- a/surveyform.css
+++ b/surveyform.css
@@ -1,9 +1,63 @@
+
 body {
-  font-family: 'Roboto', sans-serif;
-  background-color: rgba(136, 136, 206, 0.7);
-};
+  background-color: pink;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.4;
+  color: var(--color-white);
+}
+
+#header {
+  background-color: yellow;
+  text-align: center;
+  max-width: 600px;
+  margin: auto;
+  border-radius: 0.2rem;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+#form {
+  background-color: yellow;
+  text-align: center;
+  margin: auto;
+  border-radius: 0.2rem;
+  margin-top: 50px;
+  padding: 50px;
+  max-width: 500px;
+}
 
 
-#container {
- background-color:white;
-};
+.form-group label {
+  display: flex;
+
+  font-size: 1.125rem;
+  margin-bottom: 0.5rem;
+}
+
+.form-control{
+  display: block;
+width: 100%;
+height: 2.375rem;
+padding: 0.375rem 0.75rem;
+color: #495057;
+background-color: #fff;
+background-clip: padding-box;
+border: 1px solid #ced4da;
+border-radius: 0.5rem;
+transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  text-align: left;
+  font-size: 1.125rem;
+}
+
+#input-comment {
+  padding-right: 200px;
+  border-radius: 0.5rem;
+}
