--- a/surveyform.css
+++ b/surveyform.css
@@ -61,3 +61,13 @@ p {
   padding-right: 200px;
   border-radius: 0.5rem;
 }
+
+#submit {
+  display: block;
+width: 100%;
+padding: 0.75rem;
+background-color: red
+color: blue;
+border-radius: 2px;
+cursor: pointer;
+}
