--- a/landingpage.css
+++ b/landingpage.css
@@ -51,3 +51,47 @@ nav > ul {
 li {
   list-style-type: none;
 }
+
+#hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 200px;
+  margin-top: 50px;
+}
+
+#hero > h2 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  word-wrap: break-word;
+}
+
+#email {
+  max-width: 275px;
+  width: 100%;
+  padding: 5px;
+}
+
+#submit {
+  max-width: 150px;
+  width: 100%;
+
+  margin: 15px 0;
+  border: 0;
+  padding: 0 20px;
+  height: 40px;
+  font-size: 1em;
+  font-weight: 900;
+  text-transform: uppercase;
+  border-radius: 5px;
+  background: transparent;
+  background-color: yellow;
+  cursor: pointer;
+}
+
+#submit:hover{
+  background-color: orange;
+  transition: background-color 1s;
+}
