--- a/landingpage.css
+++ b/landingpage.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-  position: fixed;
+  position: sticky;
   top: 0;
   min-height: 75px;
   padding: 0px 20px;
@@ -75,7 +75,7 @@ li {
   padding: 5px;
 }
 
-#submit {
+.button {
   max-width: 150px;
   width: 100%;
 
@@ -92,7 +92,7 @@ li {
   cursor: pointer;
 }
 
-#submit:hover{
+.button:hover{
   background-color: orange;
   transition: background-color 1s;
 }
@@ -144,4 +144,85 @@ li {
 
 .mesc  p {
   margin: 0;
+}
+
+#howItWorks {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+#howItWorks > iframe {
+  max-width: 560px;
+  width: 100%;
+  margin: auto;
+}
+
+
+#pricing {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: calc(100% / 3);
+  margin: 10px;
+  border: 1px solid #000;
+  border-radius: 3px;
+}
+
+.product > .level {
+  background-color: #ddd;
+  color: black;
+  padding: 15px 0;
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.product > h2 {
+  margin-top: 15px;
+}
+
+.product > ol {
+  margin: 15px 0;
+  padding: 0;
+}
+
+.product > ol > li {
+  padding: 5px 0;
+}
+
+footer {
+  margin-top: 30px;
+  background-color: #ddd;
+  padding: 20px;
+}
+
+footer > ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer > ul > li {
+  padding: 0 10px;
+
+}
+
+footer > ul > li > a {
+  text-decoration: none;
+  color: #000;
+}
+
+footer > span {
+  margin-top: 5px;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 0.9em;
+  color: #444;
 }
