--- a/landingpage.css
+++ b/landingpage.css
@@ -17,6 +17,12 @@ header {
   background-color: #eee;
 }
 
+@media (max-width: 600px) {
+  header {
+    flex-wrap: wrap;
+  }
+}
+
 .logo > img {
   width: 100%;
   height: 100%;
@@ -27,6 +33,7 @@ header {
   text-align: center;
   margin-left: 20px;
 }
+
 
 .logo{
   width: 768px;
