--- a/landingpage.css
+++ b/landingpage.css
@@ -34,9 +34,22 @@ header {
   margin-left: 20px;
 }
 
+@media (max-width: 650px) {
+  .logo > img {
+    margin: 0 auto;
+  }
+}
 
 .logo{
   width: 768px;
+}
+
+@media (max-width: 650px) {
+  .logo {
+    margin-top: 15px;
+    width: 100%;
+    position: relative;
+  }
 }
 
 .nav-bar {
@@ -44,11 +57,29 @@ header {
   width: 448px;
 }
 
+@media (max-width: 650px) {
+  nav {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0 50px;
+  }
+}
+
 nav > ul {
   width: 448px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+
+@media (max-width: 650px) {
+  nav > ul {
+    flex-direction: column;
+  }
 }
 
 .nav-link {
@@ -75,6 +106,13 @@ li {
   margin-bottom: 20px;
   word-wrap: break-word;
 }
+
+@media (max-width: 650px) {
+  #hero {
+    margin-top: 120px;
+  }
+}
+
 
 #email {
   max-width: 275px;
@@ -126,6 +164,7 @@ li {
   height: 125px;
   width: 20vw;
 }
+
 .fa {
   display: inline-block;
   height: 48px;
@@ -171,6 +210,18 @@ li {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+@media (max-width: 800px) {
+  #pricing {
+    flex-direction: column;
+  }
+  .product {
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
 }
 
 .product {
