--- a/docpage.css
+++ b/docpage.css
@@ -116,9 +116,16 @@ section article code {
   }
 
   main#main-doc {
-    position: relative;
+
     margin-left: 0px;
     margin-top: 270px;
+  }
+
+  section article code {
+    margin-left: -10px;
+    width: auto;
+    padding: 15px;
+    margin-right: 30px;
   }
 }
 
