--- a/docpage.css
+++ b/docpage.css
@@ -122,10 +122,10 @@ section article code {
   }
 
   section article code {
-    margin-left: -10px;
-    width: auto;
-    padding: 15px;
-    margin-right: 30px;
+
+    min-width: 100%;
+
+
   }
 }
 
