--- a/fortfolio.css
+++ b/fortfolio.css
@@ -98,13 +98,15 @@ nav.nav {
   position: fixed;
   width: 100%;
   height: auto;
-  background-color: red;
+  background-color: white;
 
 }
 
 .nav > ul {
+  width: 300px;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
 }
 
 .nav-list {
@@ -141,8 +143,8 @@ nav.nav {
   align-items: center;
   width: auto;
   height: 100vh;
-  background-color: #000;
-  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+  background-color: #eee;
+
 }
 
 .welcome-section > p {
@@ -236,7 +238,7 @@ section.contact-section {
   width: auto;
   height: 80vh;
   padding: 0 2rem;
-  background: var(--main-gray);
+  background: #eee;
 }
 
 .contact-section-header > h2 {
@@ -258,7 +260,7 @@ section.contact-section {
   justify-content: center;
   width: 100%;
   max-width: 980px;
-  margin-top: 4rem;
+  margin-top: 50px;
   flex-wrap: wrap;
 }
 
